src/components/Navbar.css
nav.trans-nav {
  position: fixed;
  /* background-color: transparent; */
  background-color: rgb(255, 255, 255);
  z-index: 10;
  height: 64px;
  box-shadow: none;
}

.nav-login-group {
  display: flex;
}

nav {
  background-color: var(--mainWhite) !important;
}
.nav-item a {
  color: var(--mainBlack) !important;
}
.brand-logo img {
  width: 45%;
}

.nav-wrapper {
  display: flex;
  justify-content: space-between;
}

/* @media (min-width: 993px) {
  .container {
    width: 80% !important;
  }
} */

